--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "goto",
+  "name": "software-release",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -26,6 +26,6 @@
     "globals": "^16.5.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
-    "vite": "^7.2.4"
+    "vite": "^7.3.1"
   }
 }
