--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@uiw/react-json-view": "^2.0.0-alpha.41",
+    "json-stringify-pretty-compact": "^4.0.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "tachyons": "^4.12.0"
